--- a/.github/workflows/build_parsed_article.yml
+++ b/.github/workflows/build_parsed_article.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+      - run: cd parsed_article && rm -rf *
       - run: cd ocr_helper && npm install && npm run build_parsed_article -- ../ocr_config ../ocr_cache ../ocr_patch ../parsed_article
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
